--- a/index.html
+++ b/index.html
@@ -6,5 +6,36 @@
     <title>Portfolio - Ankush</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="header">
+      <div class="container">
+        <nav>
+          <h2 class="logo">
+            <span style="color: #ff004f; font-size: 2rem">A</span>nkush.
+          </h2>
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Services</a>
+            </li>
+            <li>
+              <a href="#">Portfolio</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header-text">
+          <p>Web Developer</p>
+          <h1>Hi, I'm <span>Ankush</span><br />From India</h1>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
