--- a/index.html
+++ b/index.html
@@ -37,5 +37,71 @@
         </div>
       </div>
     </div>
+    <!-- ---------------- About section -------------------- -->
+    <div id="about">
+      <div class="container">
+        <div class="row">
+          <div class="left-section">
+            <img src="images/aboutPic.png" alt="about section picture" />
+          </div>
+          <div class="right-section">
+            <h1 class="about-title">About Me</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
+              alias vitae quia vel. Aliquam illo nobis inventore praesentium
+              alias illum adipisci culpa ad molestias itaque eos, cumque numquam
+              quaerat mollitia aspernatur sint similique accusantium ullam
+              tenetur. Expedita hic necessitatibus quidem sunt inventore
+              voluptas, ipsam autem commodi soluta illo rerum deleniti doloribus
+              odit quisquam molestiae amet at voluptatum, aliquam culpa dolor!
+            </p>
+            <div class="tab-titles">
+              <p class="tab-links active-link" onclick="openTab('skills')">
+                Skills
+              </p>
+              <p class="tab-links" onclick="openTab('experience')">
+                Experience
+              </p>
+              <p class="tab-links" onclick="openTab('education')">Education</p>
+            </div>
+            <div class="tab-contents active-tab" id="skills">
+              <ul>
+                <li><span>UI/UX</span><br />Designing Web/App interfaces</li>
+                <li><span>Web Development</span><br />Web app development</li>
+                <li>
+                  <span>App Development</span><br />Building Andriod/iOS apps
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="experience">
+              <ul>
+                <li>
+                  <span>Nov'2024 - Present</span><br />SDE1 at Windsor Tech
+                </li>
+                <li>
+                  <span>Apr'2024 - Oct'2024</span><br />Software Developer at
+                  Aventisia Technologies
+                </li>
+                <li>
+                  <span>2022 - 2024</span><br />Software Engineer at Maruti
+                  Suzuki
+                </li>
+                <li>
+                  <span>2016 - 2022</span><br />Deputy Manager at Maruti Suzuki.
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="education">
+              <ul>
+                <li><span>2016</span><br />B.Tech from NIT Jamshedpur</li>
+                <li><span>2011</span><br />12th from DPS Ranchi</li>
+                <li><span>2009</span><br />10th from JNV Chatra</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
