chore: Update description and add link address

--- a/index.html
+++ b/index.html
@@ -54,13 +54,20 @@
           <div class="right-section">
             <h1 class="title">About Me</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
-              alias vitae quia vel. Aliquam illo nobis inventore praesentium
-              alias illum adipisci culpa ad molestias itaque eos, cumque numquam
-              quaerat mollitia aspernatur sint similique accusantium ullam
-              tenetur. Expedita hic necessitatibus quidem sunt inventore
-              voluptas, ipsam autem commodi soluta illo rerum deleniti doloribus
-              odit quisquam molestiae amet at voluptatum, aliquam culpa dolor!
+              I am Ankush, a Software Development Engineer with over 2 years of
+              experience specializing in frontend and backend web development.
+              Proficient in technologies like ReactJS, TypeScript, and Redux, I
+              have built scalable web applications with a strong focus on user
+              experience. My projects, including CryptoTracker and Shop,
+              showcase my ability to design and deliver innovative solutions.
+              <br /><br />
+              In addition to my technical expertise, I bring excellent
+              collaboration and problem-solving skills, having worked in Agile
+              environments with cross-functional teams. I am passionate about
+              staying updated with emerging technologies to create impactful and
+              efficient applications. Outside of work, I enjoy playing
+              volleyball and exploring car modifications, combining creativity
+              with a drive for innovation.
             </p>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="openTab('skills')">
@@ -118,31 +125,34 @@
             <i class="fa-solid fa-code"></i>
             <h2>Web Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
-              aspernatur fuga corrupti beatae eveniet doloribus cumque nostrum
-              blanditiis cum eos.
+              I specialize in creating dynamic and responsive web designs using
+              ReactJS, TypeScript, and Tailwind CSS. My focus is on developing
+              user-centric interfaces that ensure seamless navigation across
+              devices.
             </p>
-            <a href="#">Learn more</a>
+            <a href="https://github.com/Ankush-nitjsr">Learn more</a>
           </div>
           <div>
             <i class="fa-solid fa-crop"></i>
             <h2>UI/UX Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
-              aspernatur fuga corrupti beatae eveniet doloribus cumque nostrum
-              blanditiis cum eos.
+              With a strong foundation in UI/UX principles, I design intuitive
+              user interfaces that align with user needs. I transform Figma
+              designs into pixel-perfect, interactive components using modern
+              frontend tools.
             </p>
-            <a href="#">Learn more</a>
+            <a href="https://github.com/Ankush-nitjsr">Learn more</a>
           </div>
           <div>
             <i class="fa-brands fa-app-store"></i>
             <h2>App Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat
-              aspernatur fuga corrupti beatae eveniet doloribus cumque nostrum
-              blanditiis cum eos.
+              I have experience designing scalable applications like
+              CryptoTracker and Shop, ensuring a balance of aesthetics and
+              functionality. My designs prioritize performance, user engagement,
+              and adaptability.
             </p>
-            <a href="#">Learn more</a>
+            <a href="https://github.com/Ankush-nitjsr">Learn more</a>
           </div>
         </div>
       </div>
@@ -213,7 +223,9 @@
               <a href=""><i class="fab fa-facebook"></i></a>
               <a href=""><i class="fab fa-twitter-square"></i></a>
               <a href=""><i class="fab fa-instagram"></i></a>
-              <a href=""><i class="fab fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/ankush-4464998a"
+                ><i class="fab fa-linkedin"></i
+              ></a>
             </div>
             <a href="/images/Ankush_Resume.pdf" download class="btn btn2"
               >Download CV/Resume</a
