chore: Add instagram profile link

--- a/index.html
+++ b/index.html
@@ -222,7 +222,10 @@
             <div class="social-icons">
               <a href=""><i class="fab fa-facebook"></i></a>
               <a href=""><i class="fab fa-twitter-square"></i></a>
-              <a href=""><i class="fab fa-instagram"></i></a>
+              <a
+                href="https://www.instagram.com/ankushchoubey18/profilecard/?igsh=MWE4bGpzcWcydmEyZA=="
+                ><i class="fab fa-instagram"></i
+              ></a>
               <a href="https://www.linkedin.com/in/ankush-4464998a"
                 ><i class="fab fa-linkedin"></i
               ></a>
